# SentinelDNS

./: .dockerignore  .gitignore  Cargo.toml  README.md  deny.toml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  install-help.yml
.github/workflows/: ci.yml  release.yml
apps/dashboard/: package.json  tailwind.config.ts
apps/dashboard/app/: dashboard-client.tsx  globals.css  layout.tsx  page.tsx
apps/dashboard/app/api/proxy/[...path]/: route.ts
apps/dashboard/app/api/proxy/logs/live/: route.ts
apps/dashboard/app/clients/: client.tsx  page.tsx
apps/dashboard/app/domains/: client.tsx  page.tsx
apps/dashboard/app/groups/: client.tsx  page.tsx
apps/dashboard/app/heuristics/: client.tsx  page.tsx
apps/dashboard/app/lists/: client.tsx  page.tsx
apps/dashboard/app/query-log/: client.tsx  live-tail.tsx  page.tsx
apps/dashboard/app/settings/: client.tsx  page.tsx
apps/dashboard/components/: command-palette.tsx  dashboard-shell.tsx  setup-wizard.tsx  sidebar.tsx
apps/dashboard/lib/: api.ts
apps/dashboard/tests/: smoke.test.mjs
crates/sentinel-control-plane/: Cargo.toml
crates/sentinel-control-plane/src/: main.rs
crates/sentinel-policy/: Cargo.toml
crates/sentinel-policy/src/: heuristics.rs  lib.rs  presets.rs
crates/sentinel-resolver/: Cargo.toml
crates/sentinel-resolver/examples/: latency_probe.rs
crates/sentinel-resolver/src/: lib.rs  mdns.rs
crates/sentinel-storage/: Cargo.toml
crates/sentinel-storage/src/: lib.rs
crates/sentinel-types/: Cargo.toml
crates/sentinel-types/src/: lib.rs
deploy/: .env.example  Dockerfile.control-plane  Dockerfile.dashboard  docker-compose.prod.yml  docker-compose.source-fast.yml  docker-compose.yml  install.sh  sd-card-tuning.sh  sentinel-dns.service
docs/architecture/: adr-001-cname-uncloaking.md  adr-002-block-action.md  adr-003-logging-privacy.md
docs/runbooks/: release-checklist.md  release-notes-v0.1.0-beta.md  sqlite-backup-restore.md
docs/security/: dependency-policy.md
fixtures/: blocklist.txt
scripts/: verify-js-dependencies.mjs
security/: js-dependency-policy.json
tools/default-fst-builder/: Cargo.toml
tools/default-fst-builder/src/: main.rs
