[workspace]
members = [
  "crates/sentinel-types",
  "crates/sentinel-policy",
  "crates/sentinel-storage",
  "crates/sentinel-resolver",
  "crates/sentinel-control-plane",
  "tools/default-fst-builder",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Sentinel DNS Team"]

[workspace.dependencies]
anyhow = "=1.0.98"
arc-swap = "=1.7.1"
axum = "=0.8.1"
chrono = { version = "=0.4.40", features = ["serde"] }
dashmap = "=6.1.0"
metrics = "=0.24.2"
metrics-exporter-prometheus = "=0.16.2"
regex = "=1.11.1"
reqwest = { version = "=0.12.15", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
uuid = { version = "=1.16.0", features = ["serde", "v4"] }
