[package]
name = "sentinel-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sentinel-control-plane"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum.workspace = true
dashmap.workspace = true
futures = "0.3"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
regex.workspace = true
sentinel-policy = { path = "../sentinel-policy" }
sentinel-resolver = { path = "../sentinel-resolver" }
sentinel-storage = { path = "../sentinel-storage" }
sentinel-types = { path = "../sentinel-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
