[package]
name = "sentinel-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
sentinel-types = { path = "../sentinel-types" }
tokio.workspace = true
tracing.workspace = true
