[package]
name = "sentinel-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
hickory-resolver = { version = "=0.24.4", features = ["dns-over-rustls", "dns-over-https-rustls"] }
sentinel-policy = { path = "../sentinel-policy" }
sentinel-types = { path = "../sentinel-types" }
socket2 = { version = "0.5", features = ["all"] }
tokio.workspace = true
tracing.workspace = true
