[package]
name = "sentinel-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
duckdb = { version = "=1.2.1", features = ["bundled"] }
rusqlite = { version = "=0.34.0", features = ["bundled"] }
sentinel-types = { path = "../sentinel-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
